<resources>
    <string name="app_name">SolidCourse</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_name">Название курса</string>
    <string name="course_author">Автор курса</string>
    <string name="create_course">Создать курс</string>
    <string name="creating_course_title">Создание курса</string>
    <string name="add_paragraph">Добавить главу</string>
    <string name="edit_course">Изменить курс</string>
    <string name="save_course">Сохранить курс</string>
    <string name="editing_course_title">Редактирование курса</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="go">Перейти</string>
    <string name="edit">Изменить</string>
    <string name="paragraph_name">Название главы</string>
    <string name="editing_paragraph_title">Редактирование главы</string>
    <string name="create_paragraph">Создать главу</string>
    <string name="creating_paragraph_title">Создание главы</string>
    <string name="add_lesson">Добавить урок</string>
    <string name="edit_paragraph">Изменить главу</string>
    <string name="lesson_name">Название урока</string>
    <string name="creating_lesson_title">Создание урока</string>
    <string name="create_lesson">Создать урок</string>
    <string name="create_task">Добавить задание</string>
    <string name="editing_lesson_title">Редактирование урока</string>
    <string name="edit_lesson">Изменить урок</string>
    <string name="ok">OK</string>
    <string name="cancel">Отменить</string>
    <string name="time_out_task">Задание с ограничением по времени</string>
    <string name="time_in_minutes">Время в минутах</string>
    <string name="task_text">Текст задания</string>
    <string name="task_score">Баллы за задание</string>
    <string name="answer">Ответ</string>
    <string name="edit_task">Изменить задание</string>
    <string name="courses_catalog">Каталог курсов</string>
    <string name="favourites_course">Избранные курсы</string>
    <string name="user_settings">Настроики пользователя</string>
    <string name="creating_my_course">Мои курсы</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="task_editing">Редактирование задачи</string>
    <string name="creating_task">Создание задачи</string>
    <string name="choice_course">Выберите курс</string>
    <string name="available_course">Доступные курсы</string>
    <string name="edit_my_courses">Изменить мои курсы!</string>
    <string name="name">Название:</string>
    <string name="author">Автор:</string>
    <string name="add_to_favourites">Добавить в избранные</string>
    <string name="go_to_course">Перейти к курсу</string>
    <string name="course">Курс</string>
    <string name="paragraphs">Главы</string>
    <string name="lessons">Уроки:</string>
    <string name="tasks">Задания:</string>
    <string name="label_text_task">Материал задания:</string>
    <string name="read">Прочитано</string>
    <string name="text_of_task">Условие задачи</string>
    <string name="answer_to">Ответить</string>
    <string name="try_again">Решить снова</string>
    <string name="favourites_courses">Избранные курсы</string>
</resources>