<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".education.EducationCourseFragment">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/course"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/label" />


    <TextView
        android:id="@+id/course_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        app:layout_constraintTop_toBottomOf="@+id/course_name" />

    <TextView
        android:id="@+id/label_paragraphs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/paragraphs"
        app:layout_constraintTop_toBottomOf="@+id/course_author"
        tools:layout_editor_absoluteX="16dp" />

    <ListView
        android:id="@+id/paragraphs_to_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_paragraphs"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>