<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".creating.task.CountTaskEditingFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/task_editing"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/count_task_editing_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/count_task_editing_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_text"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211"
        tools:ignore="Autofill"
        tools:layout_editor_absoluteX="34dp" />

    <EditText
        android:id="@+id/count_task_editing_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/task_score"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@id/count_task_editing_text"
        tools:ignore="Autofill"
        tools:layout_editor_absoluteX="-16dp" />

    <EditText
        android:id="@+id/count_task_editing_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/answer"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@id/count_task_editing_score"
        tools:ignore="Autofill"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/count_task_editing_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_task"
        app:layout_constraintTop_toBottomOf="@id/count_task_editing_answer"
        tools:layout_editor_absoluteX="-16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>