<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".education.fragments.EducationCountTaskFragment">

    <TextView
        android:id="@+id/label_task_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_of_task"
        android:layout_marginTop="24dp"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/education_task_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_task_text" />

    <EditText
        android:id="@+id/answer_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/education_task_text"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:hint="@string/answer"/>

    <Button
        android:id="@+id/accepted_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/answer_to"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/answer_input"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/restart_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accepted_button" />
</androidx.constraintlayout.widget.ConstraintLayout>