<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creating_my_course"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/name_label"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="@+id/name_label" />

    <TextView
        android:id="@+id/author_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/name_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/item_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creating_my_course"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/author_label"
        app:layout_constraintStart_toEndOf="@+id/author_label"
        app:layout_constraintTop_toTopOf="@+id/author_label" />

    <Button
        android:id="@+id/add_to_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_favourites"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_label" />

</androidx.constraintlayout.widget.ConstraintLayout>