<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".creating.task.creating.StudyTaskCreatingFragment">

    <EditText
        android:id="@+id/study_task_creating_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_text"
        android:inputType="text"
        android:textColorHint="#757575"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/study_task_creating_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_score"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="Autofill"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintTop_toBottomOf="@id/study_task_creating_text" />

    <Button
        android:id="@+id/study_task_creating_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_task"
        app:layout_constraintTop_toBottomOf="@id/study_task_creating_score"/>


</androidx.constraintlayout.widget.ConstraintLayout>