<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".creating.course.CourseFragment">

    <TextView
        android:id="@+id/course_fragment_course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_fragment_course_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/course_fragment_course_name" />

    <Button
        android:id="@+id/course_fragment_edit_button"
        android:text="@string/edit_course"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_fragment_course_author"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/course_fragment_add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_paragraph"
        app:layout_constraintEnd_toStartOf="@+id/course_fragment_save_button"
        app:layout_constraintStart_toEndOf="@+id/course_fragment_edit_button"
        app:layout_constraintTop_toBottomOf="@+id/course_fragment_course_author"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/course_fragment_save_button"
        android:text="@string/save_course"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/course_fragment_add_button"
        app:layout_constraintWidth_percent="0.3" />

    <ListView
        android:id="@+id/course_fragment_paragraphs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/course_fragment_add_button" />
</androidx.constraintlayout.widget.ConstraintLayout>